@@ -62,7 +62,7 @@
 			  <accelerator key="I" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image1481">
+			    <widget class="GtkImage" id="image1638">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-open</property>
 			      <property name="icon_size">1</property>
@@ -90,7 +90,7 @@
 			  <signal name="activate" handler="properties_activate" last_modification_time="Wed, 12 Feb 2003 02:03:56 GMT"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image1482">
+			    <widget class="GtkImage" id="image1639">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-properties</property>
 			      <property name="icon_size">1</property>
@@ -118,7 +118,7 @@
 			  <signal name="activate" handler="export_activate" last_modification_time="Wed, 12 Feb 2003 02:03:56 GMT"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image1483">
+			    <widget class="GtkImage" id="image1640">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-save-as</property>
 			      <property name="icon_size">1</property>
@@ -140,7 +140,7 @@
 			  <signal name="activate" handler="sign_activate" last_modification_time="Wed, 12 Feb 2003 02:09:46 GMT"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image1484">
+			    <widget class="GtkImage" id="image1641">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-index</property>
 			      <property name="icon_size">1</property>
@@ -162,7 +162,7 @@
 			  <signal name="activate" handler="delete_activate" last_modification_time="Wed, 12 Feb 2003 02:05:07 GMT"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image1485">
+			    <widget class="GtkImage" id="image1642">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-delete</property>
 			      <property name="icon_size">1</property>
@@ -190,7 +190,7 @@
 			  <signal name="activate" handler="backup_activate" last_modification_time="Sun, 09 Mar 2003 17:18:15 GMT"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image1486">
+			    <widget class="GtkImage" id="image1643">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-save</property>
 			      <property name="icon_size">1</property>
@@ -212,7 +212,7 @@
 			  <signal name="activate" handler="change_passphrase_activate" last_modification_time="Wed, 12 Feb 2003 02:07:49 GMT"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image1487">
+			    <widget class="GtkImage" id="image1644">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-copy</property>
 			      <property name="icon_size">1</property>
@@ -234,7 +234,7 @@
 			  <signal name="activate" handler="gen_revoke_activate" last_modification_time="Sun, 09 Mar 2003 17:20:29 GMT"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image1488">
+			    <widget class="GtkImage" id="image1645">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-paste</property>
 			      <property name="icon_size">1</property>
@@ -262,7 +262,7 @@
 			  <signal name="activate" handler="add_uid_activate" last_modification_time="Wed, 12 Feb 2003 02:07:49 GMT"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image1489">
+			    <widget class="GtkImage" id="image1646">
 			      <property name="visible">True</property>
 			      <property name="stock">gnome-stock-text-unindent</property>
 			      <property name="icon_size">1</property>
@@ -284,7 +284,7 @@
 			  <signal name="activate" handler="add_subkey_activate" last_modification_time="Wed, 12 Feb 2003 02:07:49 GMT"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image1490">
+			    <widget class="GtkImage" id="image1647">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-add</property>
 			      <property name="icon_size">1</property>
@@ -306,7 +306,7 @@
 			  <signal name="activate" handler="add_photo_activate" last_modification_time="Wed, 12 Feb 2003 02:14:41 GMT"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image1491">
+			    <widget class="GtkImage" id="image1648">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-select-color</property>
 			      <property name="icon_size">1</property>
@@ -328,7 +328,7 @@
 			  <signal name="activate" handler="add_revoker_activate" last_modification_time="Wed, 12 Feb 2003 02:13:03 GMT"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image1492">
+			    <widget class="GtkImage" id="image1649">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-cancel</property>
 			      <property name="icon_size">1</property>
@@ -408,6 +408,56 @@
 			  <signal name="activate" handler="statusbar_activate" last_modification_time="Fri, 18 Oct 2002 16:03:05 GMT"/>
 			</widget>
 		      </child>
+
+		      <child>
+			<widget class="GtkMenuItem" id="separator18">
+			  <property name="visible">True</property>
+			</widget>
+		      </child>
+
+		      <child>
+			<widget class="GtkImageMenuItem" id="expand_all">
+			  <property name="visible">True</property>
+			  <property name="tooltip" translatable="yes">Expand all listings</property>
+			  <property name="label" translatable="yes">_Expand All</property>
+			  <property name="use_underline">True</property>
+			  <signal name="activate" handler="expand_all_activate" last_modification_time="Sat, 22 Mar 2003 03:47:47 GMT"/>
+
+			  <child internal-child="image">
+			    <widget class="GtkImage" id="image1650">
+			      <property name="visible">True</property>
+			      <property name="stock">gtk-add</property>
+			      <property name="icon_size">1</property>
+			      <property name="xalign">0.5</property>
+			      <property name="yalign">0.5</property>
+			      <property name="xpad">0</property>
+			      <property name="ypad">0</property>
+			    </widget>
+			  </child>
+			</widget>
+		      </child>
+
+		      <child>
+			<widget class="GtkImageMenuItem" id="collapse_all">
+			  <property name="visible">True</property>
+			  <property name="tooltip" translatable="yes">Collapse all listings</property>
+			  <property name="label" translatable="yes">_Collapse All</property>
+			  <property name="use_underline">True</property>
+			  <signal name="activate" handler="collapse_all_activate" last_modification_time="Sat, 22 Mar 2003 03:47:47 GMT"/>
+
+			  <child internal-child="image">
+			    <widget class="GtkImage" id="image1651">
+			      <property name="visible">True</property>
+			      <property name="stock">gtk-remove</property>
+			      <property name="icon_size">1</property>
+			      <property name="xalign">0.5</property>
+			      <property name="yalign">0.5</property>
+			      <property name="xpad">0</property>
+			      <property name="ypad">0</property>
+			    </widget>
+			  </child>
+			</widget>
+		      </child>
 		    </widget>
 		  </child>
 		</widget>
@@ -432,7 +482,7 @@
 			  <accelerator key="E" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image1493">
+			    <widget class="GtkImage" id="image1652">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-sort-ascending</property>
 			      <property name="icon_size">1</property>
@@ -455,7 +505,7 @@
 			  <accelerator key="S" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image1494">
+			    <widget class="GtkImage" id="image1653">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-index</property>
 			      <property name="icon_size">1</property>
@@ -477,7 +527,7 @@
 			  <signal name="activate" handler="encrypt_sign_file_activate" last_modification_time="Sat, 01 Mar 2003 17:05:28 GMT"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image1495">
+			    <widget class="GtkImage" id="image1654">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-convert</property>
 			      <property name="icon_size">1</property>
@@ -506,7 +556,7 @@
 			  <accelerator key="D" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image1496">
+			    <widget class="GtkImage" id="image1655">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-sort-descending</property>
 			      <property name="icon_size">1</property>
@@ -529,7 +579,7 @@
 			  <accelerator key="V" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image1497">
+			    <widget class="GtkImage" id="image1656">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-apply</property>
 			      <property name="icon_size">1</property>
@@ -551,7 +601,7 @@
 			  <signal name="activate" handler="decrypt_verify_file_activate" last_modification_time="Sat, 01 Mar 2003 17:05:28 GMT"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image1498">
+			    <widget class="GtkImage" id="image1657">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-spell-check</property>
 			      <property name="icon_size">1</property>
@@ -580,7 +630,7 @@
 			  <accelerator key="T" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image1499">
+			    <widget class="GtkImage" id="image1658">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-justify-fill</property>
 			      <property name="icon_size">1</property>
@@ -615,7 +665,7 @@
 			  <accelerator key="F1" modifiers="0" signal="activate"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image1500">
+			    <widget class="GtkImage" id="image1659">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-help</property>
 			      <property name="icon_size">1</property>
