@@ -1,3 +1,8 @@
+2003-02-21  Jacob Perkins  <jap1@users.sourceforge.net>
+
+	* seahorse-key-manager: Added View->Expand All and Collapse All
+	to address bug 108743
+
 2003-03-20  Jacob Perkins  <jap1@users.sourceforge.net>
 
 	* seahorse.schemas.in: Added validity_threshold
